--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -54,6 +54,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Gamepad_LeftShoulder)
++AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Gamepad_RightShoulder)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Move Backward",Scale=-0.500000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Move Backward",Scale=-0.500000,Key=Down)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Backward",Scale=-0.500000,Key=S)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
