Wired up fly-by-wire turning, remapped aiming

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -48,8 +48,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="AimElevation",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="AimElevation",Scale=-1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
@@ -62,6 +62,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move Backward",Scale=-0.500000,Key=Down)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Backward",Scale=-0.500000,Key=S)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Turn Left",Scale=-1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Turn Left",Scale=-1.000000,Key=A)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
